<resources>
    <string name="state">State</string>
    <string name="app_name">Tetris</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_down">Down</string>
    <string name="button_rotate">Rotate</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="level">Level</string>
    <string name="score">Score: </string>
    <string name="next_figure">Next Figure: </string>
    <string name="zero"> 0 </string>
    <string name="new_game">New Game</string>
    <string name="game_over">Game Over</string>
</resources>
