<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tetris="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TetrisActivity">

    <LinearLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <com.ruslan.tetris.TetrisView
            android:id="@+id/tetris_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            tetris:blocksX="@integer/blocksX"
            tetris:blocksY="@integer/blocksY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/state"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/state"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/score"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/score_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/score"
                android:layout_toEndOf="@id/score"
                android:text="0"
                android:textStyle="bold"
                android:layout_below="@id/score" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/button_left" />

        <Button
            android:id="@+id/button_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/button_left"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/button_right" />

        <Button
            android:id="@+id/button_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/button_rotate" />

        <Button
            android:id="@+id/button_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/button_rotate"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/button_down" />
    </RelativeLayout>
</LinearLayout>
